[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/8-bit Arcade In.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/GameFinished.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 83
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 47
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
score_label_path = NodePath("CenterContainer/PanelContainer/VBoxContainer/Score")
result_label_path = NodePath("CenterContainer/PanelContainer/VBoxContainer/Result")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.998
margin_bottom = 0.200012

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 63.0
margin_top = 195.0
margin_right = 289.0
margin_bottom = 403.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 219.0
margin_bottom = 201.0

[node name="Result" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 212.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Score" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 212.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 3 )

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 212.0
margin_bottom = 194.0
custom_constants/separation = 10

[node name="PlayAgain" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/Buttons"]
margin_right = 212.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "Play Again"

[node name="MainMenu" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/Buttons"]
margin_top = 36.0
margin_right = 212.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "go to Main menu"

[node name="Exit" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/Buttons"]
margin_top = 72.0
margin_right = 212.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 2 )
text = "Exit"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Buttons/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Buttons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Buttons/Exit" to="." method="_on_Exit_pressed"]
